# Bayes

./: README.md  pyproject.toml  readme.md  setup.py
examples/: powerz_example_intrm.py  run_powerz_true.sh
src/gbayesdesign/: BayesSampler.py  Optimizer.py  __init__.py  mvn.py  powerZ.py  rndgenerator.py
